@@ -8,24 +8,36 @@ Import-Module "$src\Neo4j-Management.psm1"
 InModuleScope Neo4j-Management {
   Describe "Get-Java" {
 
+    # Setup mocking environment
+    #  Mock Java environment
+    $javaHome = global:New-MockJavaHome
+    Mock Get-Neo4jEnv { $javaHome } -ParameterFilter { $Name -eq 'JAVA_HOME' }
+    Mock Test-Path { $false } -ParameterFilter {
+      $Path -like 'Registry::*\JavaSoft\Java Runtime Environment'
+    }
+    Mock Get-ItemProperty { $null } -ParameterFilter {
+      $Path -like 'Registry::*\JavaSoft\Java Runtime Environment*'
+    }
+    Mock Confirm-JavaVersion { $true }
+
     # Java Detection Tests
     Context "Valid Java install in JAVA_HOME environment variable" {
-      Mock Test-Path { $false }
-      [Environment]::SetEnvironmentVariable('JAVA_HOME','TestPath:\JavaHome', "Process")
-      Mock Get-ItemProperty { return $null }
-      
-      Mock Test-Path -Verifiable { $true }  -ParameterFilter {
-        ($Path -eq 'TestPath:\JavaHome\bin\java.exe')
-      }
-            
       $result = Get-Java
 
-      It "should return java location from registry" {
-        $result.java | Should Be 'TestPath:\JavaHome\bin\java.exe'
+      It "should return java location" {
+        $result.java | Should Be "$javaHome\bin\java.exe"
       }
 
       It "should have empty shell arguments" {
         $result.args | Should BeNullOrEmpty
+      }
+    }
+
+    Context "Legacy Java install in JAVA_HOME environment variable" {
+      Mock Confirm-JavaVersion -Verifiable { $false }
+
+      It "should throw if java is not supported" {
+        { Get-Java -ErrorAction Stop } | Should Throw
       }
 
       It "calls verified mocks" {
@@ -34,9 +46,7 @@ InModuleScope Neo4j-Management {
     }
 
     Context "Invalid Java install in JAVA_HOME environment variable" {
-      Mock Test-Path { $false }
-      [Environment]::SetEnvironmentVariable('JAVA_HOME','TestPath:\JavaHome', "Process")
-      Mock Get-ItemProperty { return $null }
+      Mock Test-Path { $false } -ParameterFile { $Path -like "$javaHome\bin\java.exe" }
 
       It "should throw if java missing" {
         { Get-Java -ErrorAction Stop } | Should Throw
@@ -44,31 +54,21 @@ InModuleScope Neo4j-Management {
     }
 
     Context "Valid Java install in Registry (32bit Java on 64bit OS)" {
-      Mock Test-Path { $false }
-      [Environment]::SetEnvironmentVariable('JAVA_HOME','', "Process")
-      Mock Get-ItemProperty { return $null }
-      
+      Mock Get-Neo4jEnv { $null } -ParameterFilter { $Name -eq 'JAVA_HOME' }
       Mock Test-Path -Verifiable { return $true } -ParameterFilter {
         ($Path -eq 'Registry::HKLM\SOFTWARE\Wow6432Node\JavaSoft\Java Runtime Environment')
-      }      
-      Mock Test-Path -Verifiable { $true }  -ParameterFilter {
-        ($Path -eq 'TestPath:\JavaHome\bin\java.exe')
       }
       Mock Get-ItemProperty -Verifiable { return @{ 'CurrentVersion' = '9.9'} } -ParameterFilter {
         ($Path -eq 'Registry::HKLM\SOFTWARE\Wow6432Node\JavaSoft\Java Runtime Environment')
       }
-      Mock Get-ItemProperty -Verifiable { return @{ 'JavaHome' = 'TestPath:\JavaHome'} } -ParameterFilter {
+      Mock Get-ItemProperty -Verifiable { return @{ 'JavaHome' = $javaHome} } -ParameterFilter {
         ($Path -eq 'Registry::HKLM\SOFTWARE\Wow6432Node\JavaSoft\Java Runtime Environment\9.9')
       }
-            
+
       $result = Get-Java
 
       It "should return java location from registry" {
-        $result.java | Should Be 'TestPath:\JavaHome\bin\java.exe'
-      }
-
-      It "should have empty shell arguments" {
-        $result.args | Should BeNullOrEmpty
+        $result.java | Should Be "$javaHome\bin\java.exe"
       }
 
       It "calls verified mocks" {
@@ -76,56 +76,22 @@ InModuleScope Neo4j-Management {
       }
     }
 
-    Context "Invalid Java install in Registry (32bit Java on 64bit OS)" {
-      Mock Test-Path { $false }
-      [Environment]::SetEnvironmentVariable('JAVA_HOME','', "Process")
-      Mock Get-ItemProperty { return $null }
-      
-      Mock Test-Path -Verifiable { return $true } -ParameterFilter {
-        ($Path -eq 'Registry::HKLM\SOFTWARE\Wow6432Node\JavaSoft\Java Runtime Environment')
-      }      
-      Mock Get-ItemProperty -Verifiable { return @{ 'CurrentVersion' = '9.9'} } -ParameterFilter {
-        ($Path -eq 'Registry::HKLM\SOFTWARE\Wow6432Node\JavaSoft\Java Runtime Environment')
-      }
-      Mock Get-ItemProperty -Verifiable { return @{ 'JavaHome' = 'TestPath:\JavaHome'} } -ParameterFilter {
-        ($Path -eq 'Registry::HKLM\SOFTWARE\Wow6432Node\JavaSoft\Java Runtime Environment\9.9')
-      }
-            
-      It "should throw if java missing" {
-        { Get-Java -ErrorAction Stop } | Should Throw
-      }
-
-      It "calls verified mocks" {
-        Assert-VerifiableMocks
-      }
-    }   
-
     Context "Valid Java install in Registry" {
-      Mock Test-Path { $false }
-      [Environment]::SetEnvironmentVariable('JAVA_HOME','', "Process")
-      Mock Get-ItemProperty { return $null }
-      
+      Mock Get-Neo4jEnv { $null } -ParameterFilter { $Name -eq 'JAVA_HOME' }
       Mock Test-Path -Verifiable { return $true } -ParameterFilter {
         ($Path -eq 'Registry::HKLM\SOFTWARE\JavaSoft\Java Runtime Environment')
-      }      
-      Mock Test-Path -Verifiable { $true }  -ParameterFilter {
-        ($Path -eq 'TestPath:\JavaHome\bin\java.exe')
       }
       Mock Get-ItemProperty -Verifiable { return @{ 'CurrentVersion' = '9.9'} } -ParameterFilter {
         ($Path -eq 'Registry::HKLM\SOFTWARE\JavaSoft\Java Runtime Environment')
       }
-      Mock Get-ItemProperty -Verifiable { return @{ 'JavaHome' = 'TestPath:\JavaHome'} } -ParameterFilter {
+      Mock Get-ItemProperty -Verifiable { return @{ 'JavaHome' = $javaHome} } -ParameterFilter {
         ($Path -eq 'Registry::HKLM\SOFTWARE\JavaSoft\Java Runtime Environment\9.9')
       }
-            
+
       $result = Get-Java
 
       It "should return java location from registry" {
-        $result.java | Should Be 'TestPath:\JavaHome\bin\java.exe'
-      }
-
-      It "should have empty shell arguments" {
-        $result.args | Should BeNullOrEmpty
+        $result.java | Should Be "$javaHome\bin\java.exe"
       }
 
       It "calls verified mocks" {
@@ -134,20 +100,18 @@ InModuleScope Neo4j-Management {
     }
 
     Context "Invalid Java install in Registry" {
-      Mock Test-Path { $false }
-      [Environment]::SetEnvironmentVariable('JAVA_HOME','', "Process")
-      Mock Get-ItemProperty { return $null }
-      
+      Mock Test-Path { $false } -ParameterFile { $Path -like "$javaHome\bin\java.exe" }
+      Mock Get-Neo4jEnv { $null } -ParameterFilter { $Name -eq 'JAVA_HOME' }
       Mock Test-Path -Verifiable { return $true } -ParameterFilter {
         ($Path -eq 'Registry::HKLM\SOFTWARE\JavaSoft\Java Runtime Environment')
-      }      
+      }
       Mock Get-ItemProperty -Verifiable { return @{ 'CurrentVersion' = '9.9'} } -ParameterFilter {
         ($Path -eq 'Registry::HKLM\SOFTWARE\JavaSoft\Java Runtime Environment')
       }
-      Mock Get-ItemProperty -Verifiable { return @{ 'JavaHome' = 'TestPath:\JavaHome'} } -ParameterFilter {
+      Mock Get-ItemProperty -Verifiable { return @{ 'JavaHome' = $javaHome} } -ParameterFilter {
         ($Path -eq 'Registry::HKLM\SOFTWARE\JavaSoft\Java Runtime Environment\9.9')
       }
-            
+
       It "should throw if java missing" {
         { Get-Java -ErrorAction Stop } | Should Throw
       }
@@ -156,25 +120,16 @@ InModuleScope Neo4j-Management {
         Assert-VerifiableMocks
       }
     }
-    
-    Context "Valid Java install in search path" {
-      Mock Test-Path { $false }
-      [Environment]::SetEnvironmentVariable('JAVA_HOME','', "Process")
-      Mock Get-ItemProperty { return $null }
 
-      Mock Get-Command -Verifiable { return @{ 'Path' = 'TestPath:\JavaHome\bin\java.exe' } }
-      Mock Test-Path -Verifiable { $true }  -ParameterFilter {
-        ($Path -eq 'TestPath:\JavaHome\bin\java.exe')
-      }
-            
+    Context "Valid Java install in search path" {
+      Mock Get-Neo4jEnv { $null } -ParameterFilter { $Name -eq 'JAVA_HOME' }
+
+      Mock Get-Command -Verifiable { return @{ 'Path' = "$javaHome\bin\java.exe" } }
+
       $result = Get-Java
 
-      It "should return java location from registry" {
-        $result.java | Should Be 'TestPath:\JavaHome\bin\java.exe'
-      }
-
-      It "should have empty shell arguments" {
-        $result.args | Should BeNullOrEmpty
+      It "should return java location from search path" {
+        $result.java | Should Be "$javaHome\bin\java.exe"
       }
 
       It "calls verified mocks" {
@@ -183,269 +138,204 @@ InModuleScope Neo4j-Management {
     }
 
     Context "No Java install at all" {
-      Mock Test-Path { $false }
-      [Environment]::SetEnvironmentVariable('JAVA_HOME','', "Process")
-      Mock Get-ItemProperty { return $null }
-      Mock Get-Command { return $null }
-      
+      Mock Get-Neo4jEnv { $null } -ParameterFilter { $Name -eq 'JAVA_HOME' }
+      Mock Get-Command { $null }
+
       It "should throw if java not detected" {
         { Get-Java -ErrorAction Stop } | Should Throw
       }
     }
-    
+
     # ForServer tests
-    Context "Server Invoke - Community v2.3" {
-      Mock Test-Path { $false }
-      [Environment]::SetEnvironmentVariable('JAVA_HOME','TestPath:\JavaHome', "Process")
-      Mock Get-ItemProperty { return $null }      
-      Mock Test-Path { $true }  -ParameterFilter {
-        ($Path -eq 'TestPath:\JavaHome\bin\java.exe')
-      }
-      
-      $serverObject = (New-Object -TypeName PSCustomObject -Property @{
-        'Home' = 'TestDrive:\Path';
-        'ServerVersion' = '2.3';
-        'ServerType' = 'Community'
-      })
+    Context "Server Invoke - Community v3.0" {
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community'
 
       $result = Get-Java -ForServer -Neo4jServer $serverObject
       $resultArgs = ($result.args -join ' ')
 
-      It "should have main class of org.neo4j.server.CommunityBootstrapper" {
-        $resultArgs | Should Match ([regex]::Escape('-DserverMainClass=org.neo4j.server.CommunityBootstrapper'))
-      }
-
-      It "should have correct WorkingDir" {
-        $resultArgs | Should Match ([regex]::Escape('-DworkingDir="TestDrive:\Path'))
-      }
-
-      It "should have DserverMainClass before jar in arguments" {
-        ($resultArgs.IndexOf('-DserverMainClass=') -lt $resultArgs.IndexOf(' -jar ')) | Should Be $true
+      It "should have main class of org.neo4j.server.CommunityEntryPoint" {
+        $resultArgs | Should Match ([regex]::Escape(' org.neo4j.server.CommunityEntryPoint'))
       }
     }
 
-    Context "Server Invoke - Enterprise v2.3" {
-      Mock Test-Path { $false }
-      [Environment]::SetEnvironmentVariable('JAVA_HOME','TestPath:\JavaHome', "Process")
-      Mock Get-ItemProperty { return $null }      
-      Mock Test-Path { $true }  -ParameterFilter {
-        ($Path -eq 'TestPath:\JavaHome\bin\java.exe')
-      }
-      
-      $serverObject = (New-Object -TypeName PSCustomObject -Property @{
-        'Home' = 'TestDrive:\Path';
-        'ServerVersion' = '2.3';
-        'ServerType' = 'Enterprise'
-      })
+    Context "Server Invoke - Enterprise v3.0" {
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Enterprise'
 
       $result = Get-Java -ForServer -Neo4jServer $serverObject
       $resultArgs = ($result.args -join ' ')
 
-      It "should have main class of org.neo4j.server.enterprise.EnterpriseBootstrapper" {
-        $resultArgs | Should Match ([regex]::Escape('-DserverMainClass=org.neo4j.server.enterprise.EnterpriseBootstrapper'))
-      }
-
-      It "should have correct WorkingDir" {
-        $resultArgs | Should Match ([regex]::Escape('-DworkingDir="TestDrive:\Path'))
-      }
-
-      It "should have DserverMainClass before jar in arguments" {
-        ($resultArgs.IndexOf('-DserverMainClass=') -lt $resultArgs.IndexOf(' -jar ')) | Should Be $true
+      It "should have main class of org.neo4j.server.enterprise.EnterpriseEntryPoint" {
+        $resultArgs | Should Match ([regex]::Escape(' org.neo4j.server.enterprise.EnterpriseEntryPoint'))
       }
     }
 
-    Context "Server Invoke - Advanced v2.3" {
-      Mock Test-Path { $false }
-      [Environment]::SetEnvironmentVariable('JAVA_HOME','TestPath:\JavaHome', "Process")
-      Mock Get-ItemProperty { return $null }      
-      Mock Test-Path { $true }  -ParameterFilter {
-        ($Path -eq 'TestPath:\JavaHome\bin\java.exe')
-      }
-      
-      $serverObject = (New-Object -TypeName PSCustomObject -Property @{
-        'Home' = 'TestDrive:\Path';
-        'ServerVersion' = '2.3';
-        'ServerType' = 'Advanced'
-      })
+    Context "Server Invoke - Enterprise Arbiter v3.0" {
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Enterprise' -DatabaseMode 'Arbiter'
 
       $result = Get-Java -ForServer -Neo4jServer $serverObject
       $resultArgs = ($result.args -join ' ')
 
-      It "should have main class of org.neo4j.server.advanced.AdvancedBootstrapper" {
-        $resultArgs | Should Match ([regex]::Escape('-DserverMainClass=org.neo4j.server.advanced.AdvancedBootstrapper'))
-      }
-
-      It "should have correct WorkingDir" {
-        $resultArgs | Should Match ([regex]::Escape('-DworkingDir="TestDrive:\Path'))
-      }
-
-      It "should have DserverMainClass before jar in arguments" {
-        ($resultArgs.IndexOf('-DserverMainClass=') -lt $resultArgs.IndexOf(' -jar ')) | Should Be $true
+      It "should have main class of org.neo4j.server.enterprise.EnterpriseEntryPoint" {
+        $resultArgs | Should Match ([regex]::Escape(' org.neo4j.server.enterprise.ArbiterEntryPoint'))
       }
     }
 
-    Context "Server Invoke - Community v2.2" {
-      Mock Test-Path { $false }
-      [Environment]::SetEnvironmentVariable('JAVA_HOME','TestPath:\JavaHome', "Process")
-      Mock Get-ItemProperty { return $null }      
-      Mock Test-Path { $true }  -ParameterFilter {
-        ($Path -eq 'TestPath:\JavaHome\bin\java.exe')
-      }
-      
-      $serverObject = (New-Object -TypeName PSCustomObject -Property @{
-        'Home' = 'TestDrive:\Path';
-        'ServerVersion' = '2.2';
-        'ServerType' = 'Community'
-      })
+    Context "Server Invoke - Should set heap size" {
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community' `
+        -NeoConfSettings 'dbms.memory.heap.initial_size=123k','dbms.memory.heap.max_size=234g'
 
       $result = Get-Java -ForServer -Neo4jServer $serverObject
       $resultArgs = ($result.args -join ' ')
 
-      It "should have main class of org.neo4j.server.Bootstrapper" {
-        $resultArgs | Should Match ([regex]::Escape('-DserverMainClass=org.neo4j.server.Bootstrapper'))
+      It "should set initial heap size" {
+        $resultArgs | Should Match ([regex]::Escape(' -Xms123k '))
+      }
+
+      It "should set max heap size" {
+        $resultArgs | Should Match ([regex]::Escape(' -Xmx234g '))
       }
     }
 
-    Context "Server Invoke - Community v2.1" {
-      Mock Test-Path { $false }
-      [Environment]::SetEnvironmentVariable('JAVA_HOME','TestPath:\JavaHome', "Process")
-      Mock Get-ItemProperty { return $null }      
-      Mock Test-Path { $true }  -ParameterFilter {
-        ($Path -eq 'TestPath:\JavaHome\bin\java.exe')
-      }
-      
-      $serverObject = (New-Object -TypeName PSCustomObject -Property @{
-        'Home' = 'TestDrive:\Path';
-        'ServerVersion' = '2.1';
-        'ServerType' = 'Community'
-      })
+    Context "Server Invoke - Should default heap size unit to megabytes" {
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community' `
+        -NeoConfSettings 'dbms.memory.heap.initial_size=123','dbms.memory.heap.max_size=234'
 
       $result = Get-Java -ForServer -Neo4jServer $serverObject
       $resultArgs = ($result.args -join ' ')
 
-      It "should have main class of org.neo4j.server.Bootstrapper" {
-        $resultArgs | Should Match ([regex]::Escape('-DserverMainClass=org.neo4j.server.Bootstrapper'))
+      It "should set initial heap size" {
+        $resultArgs | Should Match ([regex]::Escape(' -Xms123m '))
+      }
+
+      It "should set max heap size" {
+        $resultArgs | Should Match ([regex]::Escape(' -Xmx234m '))
       }
     }
 
-    Context "Server Invoke - Community v2.0" {
-      Mock Test-Path { $false }
-      [Environment]::SetEnvironmentVariable('JAVA_HOME','TestPath:\JavaHome', "Process")
-      Mock Get-ItemProperty { return $null }      
-      Mock Test-Path { $true }  -ParameterFilter {
-        ($Path -eq 'TestPath:\JavaHome\bin\java.exe')
-      }
-      
-      $serverObject = (New-Object -TypeName PSCustomObject -Property @{
-        'Home' = 'TestDrive:\Path';
-        'ServerVersion' = '2.0';
-        'ServerType' = 'Community'
-      })
+    Context "Server Invoke - Enable Default GC Logs" {
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community' `
+        -NeoConfSettings 'dbms.logs.gc.enabled=true'
 
       $result = Get-Java -ForServer -Neo4jServer $serverObject
       $resultArgs = ($result.args -join ' ')
 
-      It "should have main class of org.neo4j.server.Bootstrapper" {
-        $resultArgs | Should Match ([regex]::Escape('-DserverMainClass=org.neo4j.server.Bootstrapper'))
+      It "should set GCLogfile" {
+        $resultArgs | Should Match ([regex]::Escape(' -Xloggc:'))
+      }
+
+      It "should set GCLogFileSize" {
+        $resultArgs | Should Match ([regex]::Escape(' -XX:GCLogFileSize='))
+      }
+
+      It "should set NumberOfGCLogFiles" {
+        $resultArgs | Should Match ([regex]::Escape(' -XX:NumberOfGCLogFiles='))
+      }
+
+      It "should set PrintGCDetails" {
+        $resultArgs | Should Match ([regex]::Escape(' -XX:+PrintGCDetails'))
+      }
+
+      It "should set PrintGCDateStamps" {
+        $resultArgs | Should Match ([regex]::Escape(' -XX:+PrintGCDateStamps'))
+      }
+
+      It "should set PrintGCApplicationStoppedTime" {
+        $resultArgs | Should Match ([regex]::Escape(' -XX:+PrintGCApplicationStoppedTime'))
+      }
+
+      It "should set PrintPromotionFailure" {
+        $resultArgs | Should Match ([regex]::Escape(' -XX:+PrintPromotionFailure'))
+      }
+
+      It "should set PrintTenuringDistribution" {
+        $resultArgs | Should Match ([regex]::Escape(' -XX:+PrintTenuringDistribution'))
       }
     }
 
-
-    Context "Server Invoke - Community v1.9" {
-      Mock Test-Path { $false }
-      [Environment]::SetEnvironmentVariable('JAVA_HOME','TestPath:\JavaHome', "Process")
-      Mock Get-ItemProperty { return $null }      
-      Mock Test-Path { $true }  -ParameterFilter {
-        ($Path -eq 'TestPath:\JavaHome\bin\java.exe')
-      }
-      
-      $serverObject = (New-Object -TypeName PSCustomObject -Property @{
-        'Home' = 'TestDrive:\Path';
-        'ServerVersion' = '1.9';
-        'ServerType' = 'Community'
-      })
+    Context "Server Invoke - Enable Specific GC Logs" {
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community' `
+        -NeoConfSettings 'dbms.logs.gc.enabled=true','dbms.logs.gc.options=key1=value1 key2=value2'
 
       $result = Get-Java -ForServer -Neo4jServer $serverObject
       $resultArgs = ($result.args -join ' ')
 
-      It "should have main class of org.neo4j.server.Bootstrapper" {
-        $resultArgs | Should Match ([regex]::Escape('-DserverMainClass=org.neo4j.server.Bootstrapper'))
+      It "should set GCLogfile" {
+        $resultArgs | Should Match ([regex]::Escape(' -Xloggc:'))
+      }
+
+      It "should set GCLogFileSize" {
+        $resultArgs | Should Match ([regex]::Escape(' -XX:GCLogFileSize='))
+      }
+
+      It "should set NumberOfGCLogFiles" {
+        $resultArgs | Should Match ([regex]::Escape(' -XX:NumberOfGCLogFiles='))
+      }
+
+      It "should set specific options" {
+        $resultArgs | Should Match ([regex]::Escape(' key1=value1'))
+        $resultArgs | Should Match ([regex]::Escape(' key2=value2'))
       }
     }
-    
+
     # Utility Invoke
     Context "Utility Invoke" {
-      Mock Test-Path { $false }
-      [Environment]::SetEnvironmentVariable('JAVA_HOME','TestPath:\JavaHome', "Process")
-      Mock Get-ItemProperty { return $null }      
-      Mock Test-Path { $true }  -ParameterFilter {
-        ($Path -eq 'TestPath:\JavaHome\bin\java.exe') -or
-        ($Path -eq 'TestDrive:\FakeExtraClass')
-      }
-      Mock Get-ChildItem { @(
-        @{ 'Extension'='.jar'; 'Fullname'='TestDrive:\fake1.jar'}
-      )} -ParameterFilter { $Path -eq 'TestDrive:\Path\lib' }
-      Mock Get-ChildItem { @(
-        @{ 'Extension'='.jar'; 'Fullname'='TestDrive:\FakeExtraClass\fake2.jar'}
-      )} -ParameterFilter { $Path -eq 'TestDrive:\FakeExtraClass' }
-      
-      $serverObject = (New-Object -TypeName PSCustomObject -Property @{
-        'Home' = 'TestDrive:\Path'; 'ServerVersion' = '99.99'; 'ServerType' = 'Community'
-      })
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '99.99' -ServerType 'Community'
 
-      $result = Get-Java -ForUtility -AppName 'someapp' -StartingClass 'someclass' -ExtraClassPath 'TestDrive:\FakeExtraClass' -Neo4jServer $serverObject -ErrorAction Stop
+      $result = Get-Java -ForUtility -StartingClass 'someclass' -Neo4jServer $serverObject -ErrorAction Stop
       $resultArgs = ($result.args -join ' ')
 
-      It "should have correct ClassPath" {
-        $resultArgs | Should Match ([regex]::Escape('-classpath ;"TestDrive:\fake1.jar";"TestDrive:\FakeExtraClass\fake2.jar"'))
+      It "should have jars from bin" {
+        $resultArgs | Should Match ([regex]::Escape('bin1.jar"'))
       }
-      It "should have correct Repo" {
-        $resultArgs | Should Match ([regex]::Escape('-Dapp.repo="TestDrive:\Path\lib"'))
-      }
-      It "should have correct BaseDir" {
-        $resultArgs | Should Match ([regex]::Escape('-Dbasedir="TestDrive:\Path'))
-      }
-      It "should have correct App" {
-        $resultArgs | Should Match ([regex]::Escape('-Dapp.name=someapp'))
+      It "should have jars from lib" {
+        $resultArgs | Should Match ([regex]::Escape('lib1.jar"'))
       }
       It "should have correct Starting Class" {
         $resultArgs | Should Match ([regex]::Escape(' someclass'))
       }
-    }    
+    }
 
-    # Arbiter Invoke
-    Context "Arbiter Invoke" {
-      Mock Test-Path { $false }
-      [Environment]::SetEnvironmentVariable('JAVA_HOME','TestPath:\JavaHome', "Process")
-      Mock Get-ItemProperty { return $null }      
-      Mock Test-Path { $true }  -ParameterFilter {
-        ($Path -eq 'TestPath:\JavaHome\bin\java.exe')
-      }
-      
-      $serverObject = (New-Object -TypeName PSCustomObject -Property @{
-        'Home' = 'TestDrive:\Path';
-        'ServerVersion' = '2.3';
-        'ServerType' = 'Enterprise'
-      })
+    Context "Utility Invoke - Should set heap size from environment variable" {
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '99.99' -ServerType 'Community'
+      Mock Get-Neo4jEnv { '666m' } -ParameterFilter { $Name -eq 'HEAP_SIZE' }
 
-      $result = Get-Java -ForArbiter -Neo4jServer $serverObject
+      $result = Get-Java -ForUtility -StartingClass 'someclass' -Neo4jServer $serverObject -ErrorAction Stop
       $resultArgs = ($result.args -join ' ')
 
-      It "should have main class of org.neo4j.server.advanced.AdvancedBootstrapper" {
-        $resultArgs | Should Match ([regex]::Escape('-DserverMainClass=org.neo4j.server.enterprise.StandaloneClusterClient'))
+      It "should have jars from bin" {
+        $resultArgs | Should Match ([regex]::Escape('bin1.jar"'))
       }
+      It "should have jars from lib" {
+        $resultArgs | Should Match ([regex]::Escape('lib1.jar"'))
+      }
+      It "should have correct Starting Class" {
+        $resultArgs | Should Match ([regex]::Escape(' someclass'))
+      }
+      It "should have correct initial heap" {
+        $resultArgs | Should Match ([regex]::Escape('-Xms666m'))
+      }
+      It "should have correct maximum heap" {
+        $resultArgs | Should Match ([regex]::Escape('-Xmx666m'))
+      }
+    }
 
-      It "should have correct WorkingDir" {
-        $resultArgs | Should Match ([regex]::Escape('-DworkingDir="TestDrive:\Path'))
-      }
+	Context "Server Invoke - Should handle paths with spaces" {
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community' `
+	    -RootDir 'TestDrive:\Neo4j Home' `
+        -NeoConfSettings 'dbms.logs.gc.enabled=true'
 
-      It "should have correct Config File" {
-        $resultArgs | Should Match ([regex]::Escape('-DconfigFile="conf/arbiter-wrapper.conf"'))
-      }
+      $result = Get-Java -ForServer -Neo4jServer $serverObject
+	  $argList = $result.args
 
-      It "should have DserverMainClass before jar in arguments" {
-        ($resultArgs.IndexOf('-DserverMainClass=') -lt $resultArgs.IndexOf(' -jar ')) | Should Be $true
-      }
+	  It "should have literal quotes around config path" {
+		$argList -contains "--config-dir=`"TestDrive:\Neo4j Home\conf`"" | Should Be True
+	  }
+	  It "should have literal quotes around home path" {
+		$argList -contains "--home-dir=`"TestDrive:\Neo4j Home`"" | Should Be True
+	  }
+	  It "should have literal quotes around gclog path" {
+		$argList -contains "-Xloggc:`"TestDrive:\Neo4j Home/gc.log`"" | Should Be True
+	  }
     }
   }
 }
